ecertando o form esquecido no exercicio.

--- a/formulario.html
+++ b/formulario.html
@@ -9,14 +9,16 @@
     <hr />
     <h1>Formulário de Cadastro</h1>
     <hr />
-    <label for="nome">Digite seu nome:</label>
-    <input id="nome" type="text" /><br />
-    <label for="email">Digite seu email:</label>
-    <input id="email" type="text"><br />
-    <label for="senha">Digite sua senha:</label>
-    <input id="senha" type="password"><br />
-    <button type="submit">
-        Cadastrar
-    </button>
+    <form>    
+        <label for="nome">Digite seu nome:</label>
+        <input id="nome" type="text" /><br />
+        <label for="email">Digite seu email:</label>
+        <input id="email" type="text"><br />
+        <label for="senha">Digite sua senha:</label>
+        <input id="senha" type="password"><br />
+        <button type="submit">
+            Cadastrar
+        </button>
+    </form>
 </body>
 </html>
